--- a/va_cpp/CMakeLists.txt
+++ b/va_cpp/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-DUSE_CXXLAPACK=1)
 add_definitions(-DWITH_MKLBLAS=1)
 add_definitions(-DCXXBLAS_DEBUG=1)
 add_definitions(-DTBB_SUPPRESS_DEPRECATED_MESSAGES)
+message(STATUS "MKLROOT" $ENV{MKLROOT})
 set(BLA_VENDOR Intel10_64lp)
 set(BLA_STATIC OFF)
 find_package(LAPACK REQUIRED)
