--- a/va_cpp/CMakeLists.txt
+++ b/va_cpp/CMakeLists.txt
@@ -114,26 +114,10 @@ else()
   message(STATUS "IPO / LTO not supported: <${error}>")
 endif()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
-endif()
-
-
-if (MSVC)
-  # warning level 4 and all warnings as errors
-  add_compile_options(/W4 /WX)
-else()
-  # lots of warnings and all warnings as errors
-  add_compile_options(
-    -Wall
-    -Wextra
-    -pedantic
-    -Werror
-    -march=native
-    -Weffc++
-    -fconcepts
-    -fdiagnostics-color=always
-    )
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libstdc++")
+  # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+  # set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
 endif()
 
 target_sources(va_cpp_static PRIVATE
