Enforce Python version used by CMake in setup.py

--- a/va_cpp/CMakeLists.txt
+++ b/va_cpp/CMakeLists.txt
@@ -40,7 +40,11 @@ find_package(BLAS REQUIRED)
 # message(STATUS "LAPACK LIBRARIES: " ${LAPACK_LIBRARIES})
 # message(STATUS "LAPACK LINKING FLAGS: " ${LAPACK_LINKER_FLAGS})
 
-find_package(Python3 COMPONENTS Development)
+if(DEFINED PYTHON_VERSION)
+  find_package(Python3 ${PYTHON_VERSION} EXACT COMPONENTS Development REQUIRED)
+else()
+  find_package(Python3 COMPONENTS Development REQUIRED)
+endif()
 find_package(pybind11 CONFIG REQUIRED)
 find_package(doctest REQUIRED)
 find_package(xtensor CONFIG REQUIRED)
