Add printing Python version in CI

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -147,6 +147,7 @@ jobs:
 
     - name: Build
       run: |
+        python --version
         python setup.py bdist_wheel
       env:
         VCPKG_ROOT: ${{ github.workspace }}/vcpkg
