--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -52,13 +52,12 @@ jobs:
     - name: Configure MKL  (Windows)
       if: runner.os == 'Windows'
       run: |
-        echo "::set-env name=MKLROOT::~/mkl/installed/compilers_and_libraries_2020.1.216/windows/mkl"
-        $env:PATH += ";~/mkl/installed/compilers_and_libraries_2020.1.216/windows/compiler/lib/intel64_win"
-        $env:PATH += ";~/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/compiler"
-        $env:PATH += ";~/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/mkl"
-        $env:PATH += ";~/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/tbb"
+        echo "::set-env name=MKLROOT::$HOME/mkl/installed/compilers_and_libraries_2020.1.216/windows/mkl"
+        $env:PATH += ";$HOME/mkl/installed/compilers_and_libraries_2020.1.216/windows/compiler/lib/intel64_win"
+        $env:PATH += ";$HOME/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/compiler"
+        $env:PATH += ";$HOME/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/mkl"
+        $env:PATH += ";$HOME/mkl/installed/compilers_and_libraries_2020.1.216/windows/redist/intel64_win/tbb"
         echo "::set-env name=PATH::$env:PATH"
-        ls ~/mkl/installed/compilers_and_libraries_2020.1.216/windows/mkl
 
 #    - name: Set up Rust
 #      uses: actions-rs/toolchain@v1
